# vision_grasp_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: detection_params.yaml  grasp_params.yaml  initial_positions.yaml  pose_estimation.yaml
launch/: ur5_camera_bringup.launch.py  ur_moveit.launch.py  vision_grasp_demo_all.launch.py
models/red_box/: model.config  model.sdf
rviz/: ur5_with_camera.rviz
src/: grasp_controller.py  main_grasp_demo.py  object_detector.py  pose_estimator.py
urdf/: ur5_for_moveit_safe.urdf  ur5_with_camera.urdf  ur5_with_camera.urdf.xacro  ur5_with_camera_moveit.xacro
videos/: 视觉抓取演示.webm
