<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_grasp_demo</name>
  <version>0.0.0</version>
  <description>Visual grasp demo for UR5 robot with camera</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>ur_description</depend>
  <depend>ur_simulation_gazebo</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>rviz2</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>ur_controllers</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>